--- a/index.html
+++ b/index.html
@@ -23,10 +23,22 @@
             color: white;
             text-align: center;
             padding: 1em 0;
+            position: relative;
         }
 
         h1 {
             margin: 0;
+        }
+
+        #profile-image {
+            border-radius: 50%;
+            width: 150px;
+            height: 150px;
+            object-fit: cover;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
 
         section {
@@ -47,7 +59,8 @@
 <body>
     <header>
         <div class="container">
-            <h1>Your Name</h1>
+            <img id="profile-image" src="monty.jpg" alt="Monty">
+            <h1>Monty</h1>
             <p>Web Developer | Nutrition University Student</p>
         </div>
     </header>
@@ -93,9 +106,8 @@
 
     <section id="contact" class="container">
         <h2>Contact Information</h2>
-        <p>Email: your.email@example.com</p>
-        <p>LinkedIn: linkedin.com/in/your-profile</p>
-        <p>GitHub: github.com/yourusername</p>
+        <p>My Email: <a href="mailto:someone@example.com">mjswork@protonmail.com</a></p>
+        <p>Linkedin: <a href="linkedin.com/in/your-profile">Monty Giovenco</a></p>
         <!-- Add more contact information as needed -->
     </section>
 </body>
