--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <body>
     <header>
         <div class="container">
-            <img id="profile-image" src="monty.jpeg" alt="Monty">
+            <img id="profile-image" src="https://raw.githubusercontent.com/catsandsoup/CV/main/monty.jpeg" alt="Monty">
             <h1>Monty</h1>
             <p>Web Developer | Nutrition University Student</p>
         </div>
