--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
+            z-index: 1; /* Add this line */
         }
 
         section {
