--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="container" style="display: flex; flex-direction: column; align-items: center;">
             <img id="profile-image" src="https://raw.githubusercontent.com/catsandsoup/CV/main/monty.jpeg" alt="Monty">
             <h1>Monty</h1>
             <p>Web Developer | Nutrition University Student</p>
