--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 </head>
 <body>
     <header>
+       <header style="background-color: #333; color: white; text-align: center; padding: 1em 0;">
         <div class="container" style="display: flex; flex-direction: column; align-items: center;">
             <img id="profile-image" src="https://raw.githubusercontent.com/catsandsoup/CV/main/monty.jpeg" alt="Monty">
             <h1>Monty</h1>
