--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <body>
     <header>
        <header style="background-color: #333; color: white; text-align: center; padding: 1em 0;">
-        <div class="container" style="display: flex; flex-direction: column; align-items: center;">
+        <div class="container" style="display: flex; flex-direction: column;">
             <img id="profile-image" src="https://raw.githubusercontent.com/catsandsoup/CV/main/monty.jpeg" alt="Monty">
             <h1>Monty</h1>
             <p>Web Developer | Nutrition University Student</p>
