--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            z-index: 10; /* Add this line */
         }
 
         section {
@@ -59,9 +58,8 @@
 </head>
 <body>
     <header>
-       <header style="background-color: #333; color: white; text-align: center; padding: 1em 0;">
-        <div class="container" style="display: flex; flex-direction: column;">
-            <img id="profile-image" src="https://raw.githubusercontent.com/catsandsoup/CV/main/monty.jpeg" alt="Monty">
+        <div class="container">
+            <img id="profile-image" src="monty.jpg" alt="Monty">
             <h1>Monty</h1>
             <p>Web Developer | Nutrition University Student</p>
         </div>
