--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
       <div class="name-text">
 
-        <h1>Anthony <em>Adamski</em></h1>
-        <p>10 Iroquois St Boston, MA 02120</p>
-        <p>adamskianthony@gmail.com</p>
-        <p>(956) 500-5558</p>
+        <h1>Monty <em>Giovenco</em></h1>
+        <p>Bathurst, New South Wales</p>
+        <p>mjswork@protonmail.com</p>
+        <p>+61 457 649 991</p>
 
       </div>
 
