--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
       <div class="name-text">
 
-        <h1>Monty <em>Giovenco</em></h1>
+        <h1>Monty<em>Giovenco</em></h1>
         <p>Bathurst, New South Wales</p>
-        <p>mjswork@protonmail.com</p>
+        <p><a mailto:mjswork@protonmail.com</a></p>
         <p>+61 457 649 991</p>
 
       </div>
@@ -37,7 +37,7 @@
 
     <div class="inner">
       <section>
-        <h1>Employment</h1>
+        <h1>History of my Employment</h1>
         <p>Winter 2015 - Present <em>Grand Interactive, llc. | Mobile App Developer</em></p>
         <p>Raised $78,000 in early stage funding, created initial design
           concepts, and oversaw initial development. Currently oversee and maintain all front end code and server functionality.</p>
