--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 
     <div class="name-hero">
 
-      <div class="me-img"></div>
+      <div class="me-img">
+        <img src="https://raw.githubusercontent.com/catsandsoup/CV/main/monty.jpeg" alt="Monty Giovenco's Image" class="circular-image">
+              </div>
+      </div>
 
       <div class="name-text">
 
