--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="inner">
       <section>
         <h1>History of my Employment</h1>
-        <p>Winter 2015 - Present <em>Grand Interactive, llc. | Mobile App Developer</em></p>
+        <p>2020-2023 <em>Bed Bath N' Table | Retail Sales</em></p>
         <p>Raised $78,000 in early stage funding, created initial design
           concepts, and oversaw initial development. Currently oversee and maintain all front end code and server functionality.</p>
         <p>Spring 2012 - Winter 2015 | <em>PadMatcher Inc. | CTO, Co-Founder</em></p>
